force-app/main/default/objects/RW_EOI__c/fields/RW_Occupation__c.field-meta.xml
<CustomField>
    <fullName>RW_Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Auto and Ancillary</fullName>
            </value>
            <value>
                <fullName>Beverages and Liquor</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Consumer Service</fullName>
            </value>
            <value>
                <fullName>Creative Management</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Distribute &amp; Dispatch</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s and Clinics</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Entertainment Retail</fullName>
            </value>
            <value>
                <fullName>Food and Tobacco</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IT/ITES</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Merchandise Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Petrochemical</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Rental and Leasing</fullName>
            </value>
            <value>
                <fullName>Service Retail</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Trade Contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>