force-app/main/default/objects/RW_EOI__c/fields/RW_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>RW_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>