force-app/main/default/objects/RW_EOI__c/fields/RW_Other__c.field-meta.xml
<CustomField>
    <fullName>RW_Other__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>