force-app/main/default/objects/RW_EOI__c/fields/RW_Pan_Card_Number_of_AuthoritySignatory__c.field-meta.xml
<CustomField>
    <fullName>RW_Pan_Card_Number_of_AuthoritySignatory__c</fullName>
    <label>Pan Card Number of Authority Signatory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>