force-app/main/default/objects/RW_EOI__c/fields/RW_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <type>TextArea</type>
</CustomField>