force-app/main/default/objects/RW_EOI__c/fields/RW_Permanent_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>RW_Permanent_Address_Line_1__c</fullName>
    <label>Permanent Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>