force-app/main/default/objects/RW_EOI__c/fields/RW_Permanent_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>RW_Permanent_Address_Line_3__c</fullName>
    <label>Permanent Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>