force-app/main/default/objects/RW_EOI__c/fields/RW_Preferred_Budget__c.field-meta.xml
<CustomField>
    <fullName>RW_Preferred_Budget__c</fullName>
    <label>Preferred Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>