force-app/main/default/objects/RW_EOI__c/fields/RW_Preferred_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Preferred_Unit_Type__c</fullName>
    <label>Preferred Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>