force-app/main/default/objects/RW_EOI__c/fields/RW_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>