force-app/main/default/objects/RW_EOI__c/fields/RW_Primary_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Primary_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>