force-app/main/default/objects/RW_EOI__c/fields/RW_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Name__c</fullName>
    <formula>Opportunity__r.RW_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>