force-app/main/default/objects/RW_EOI__c/fields/RW_Reason__c.field-meta.xml
<CustomField>
    <fullName>RW_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Issue</fullName>
            </value>
            <value>
                <fullName>Inventory Issue</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Possession Timelines</fullName>
            </value>
            <value>
                <fullName>Family Problem</fullName>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
            </value>
            <value>
                <fullName>Layout Issue</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>R6</fullName>
                <label>Change of Mind</label>
            </value>
            <value>
                <fullName>R7</fullName>
                <label>Policy Driven Cancellation- Payment Defaulter</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>Financial Constraints</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Home Loan Eligibility</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Medical Exigency</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Personal Exigency</label>
            </value>
            <value>
                <fullName>R1</fullName>
                <label>Demise of the Main Applicant</label>
            </value>
            <value>
                <fullName>R2</fullName>
                <label>Dispute over Agreement Clauses</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>Upgrade</label>
            </value>
            <value>
                <fullName>R4</fullName>
                <label>Unsuitable Possession Date</label>
            </value>
            <value>
                <fullName>R5</fullName>
                <label>Vastu Compliance</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <label>Loss of Job</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <label>Cancer Patient</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>Non Approval -Building Construction Plan</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <label>Legal Issue</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>Unit Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>