force-app/main/default/objects/RW_EOI__c/fields/RW_Residential_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Residential_Company_Address__c</fullName>
    <label>Residential/Company Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>