force-app/main/default/objects/RW_EOI__c/fields/RW_Salutation__c.field-meta.xml
<CustomField>
    <fullName>RW_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>