force-app/main/default/objects/RW_EOI__c/fields/RW_Secondary_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>