force-app/main/default/objects/RW_EOI__c/fields/RW_Secondary_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_Contact_No__c</fullName>
    <label>Contact No</label>
    <type>Phone</type>
</CustomField>