force-app/main/default/objects/RW_EOI__c/fields/RW_Secondary_First_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>