force-app/main/default/objects/RW_EOI__c/fields/RW_Secondary_Passport_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_Passport_Details__c</fullName>
    <label>Passport Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>