force-app/main/default/objects/RW_EOI__c/fields/RW_Source_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Source_Contact_No__c</fullName>
    <formula>IF(NOT( ISBLANK(Opportunity__r.RW_Walkin_Channel_Partner__r.RW_Mobile_No__c))  , Opportunity__r.RW_Walkin_Channel_Partner__r.RW_Mobile_No__c,  Opportunity__r.Walkin_UnregisteredChannelPartner_Mobile__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact No</label>
    <type>Text</type>
</CustomField>