force-app/main/default/objects/RW_EOI__c/fields/RW_Source_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Source_Email_Id__c</fullName>
    <formula>IF( NOT( ISBLANK(Opportunity__r.RW_Walkin_Channel_Partner__r.RW_Email__c)) , Opportunity__r.RW_Walkin_Channel_Partner__r.RW_Email__c,  Opportunity__r.Walkin_Unregistered_ChannelPartner_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Id</label>
    <type>Text</type>
</CustomField>