force-app/main/default/objects/RW_EOI__c/fields/RW_Source_RERA_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Source_RERA_No__c</fullName>
    <formula>Opportunity__r.RW_Walkin_Channel_Partner__r.RW_RERA_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA No</label>
    <type>Text</type>
</CustomField>