force-app/main/default/objects/RW_EOI__c/fields/RW_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI Confirmed</fullName>
            </value>
            <value>
                <fullName>EOI Blocked</fullName>
            </value>
            <value>
                <fullName>EOI Booked</fullName>
            </value>
            <value>
                <fullName>Cancellation Initiated</fullName>
            </value>
            <value>
                <fullName>EOI Cancelled - Refund pending</fullName>
            </value>
            <value>
                <fullName>EOI Cancelled -Refunded</fullName>
            </value>
            <value>
                <fullName>EOI Sent to Customer</fullName>
            </value>
            <value>
                <fullName>EOI Submitted - Payment pending</fullName>
            </value>
            <value>
                <fullName>Cancellation Rejected</fullName>
            </value>
            <value>
                <fullName>EOI Cancelled</fullName>
            </value>
            <value>
                <fullName>EOI Cancelled - Refund Initiated</fullName>
                <isActive>false</isActive>
                <label>EOI Cancelled - Refund Initiated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>