force-app/main/default/objects/RW_EOI__c/fields/RW_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>RW_Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>