force-app/main/default/objects/RW_EOI__c/fields/RW_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Sub_Source__c</fullName>
    <formula>TEXT(Opportunity__r.Walkin_SubSource__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Source</label>
    <type>Text</type>
</CustomField>