force-app/main/default/objects/RW_EOI__c/fields/RW_Tentative_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>RW_Tentative_Agreement_Value__c</fullName>
    <inlineHelpText>To be filled by Sales Manager</inlineHelpText>
    <label>Tentative Agreement Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>