force-app/main/default/objects/RW_EOI__c/fields/RW_Tentative_All_Inclusive_Price__c.field-meta.xml
<CustomField>
    <fullName>RW_Tentative_All_Inclusive_Price__c</fullName>
    <inlineHelpText>To be filled by Sales Manager</inlineHelpText>
    <label>Tentative All Inclusive Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>