force-app/main/default/objects/RW_EOI__c/fields/RW_Type_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>RW_Type_Of_Origin__c</fullName>
    <label>Type Of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIO card</fullName>
            </value>
            <value>
                <fullName>OCI card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>