force-app/main/default/objects/RW_EOI__c/fields/RW_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>RW_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>