force-app/main/default/objects/RW_EOI__c/fields/Secondary_Alternate_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Alternate_Contact_No__c</fullName>
    <label>Secondary Alternate Contact No</label>
    <type>Phone</type>
</CustomField>