force-app/main/default/objects/RW_EOI__c/fields/Secondary_Home_Loan__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Home_Loan__c</fullName>
    <label>Secondary Home Loan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>