force-app/main/default/objects/RW_EOI__c/fields/Secondary_Landline_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Landline_No__c</fullName>
    <label>Secondary Landline No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>