force-app/main/default/objects/RW_EOI__c/fields/Secondary_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Nationality__c</fullName>
    <label>Secondary Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>