force-app/main/default/objects/RW_EOI__c/fields/Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Details__c</fullName>
    <label>Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>