force-app/main/default/objects/RW_EOI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RW_Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>